# coding_challenge_2026

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/: app.json
scripts/: download_data.py  setup_data.py
src/: config.py  context_builder.py  logging_config.py  main.py  query_processing.py  retrieval.py  service.py
src/api/: chat.py
src/llm/: base.py  ollama_answer_generator.py  ollama_query_parser.py
tests/: conftest.py  test_config.py  test_llm_ollama.py  test_setup_data.py
