[project]
name = "coding-challenge-2026"
version = "0.1.0"
description = "Coding challenge project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=1.0.1",
]

[dependency-groups]
dev = [
    "commitizen>=3.29",
    "detect-secrets>=1.5",
    "pre-commit>=3.8",
    "pymarkdownlnt>=0.9",
    "pytest>=9.0.3",
    "ruff>=0.6.9",
    "yamllint>=1.35",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_scheme = "pep440"
update_changelog_on_bump = true
